saturn-account-macros/tests/compile_fail/len_on_single.rs
use saturn_account_macros::Accounts;

#[derive(Accounts)]
struct LenOnSingle<'info> {
    #[account(len = 2)]
    acc: arch_program::account::AccountInfo<'info>,
}

fn main() {} 